update schema reading process